--- a/Pages/Scriptures/Index.cshtml
+++ b/Pages/Scriptures/Index.cshtml
@@ -21,7 +21,7 @@
     <p>
         Date Added: <select asp-for="SearchDate" asp-items="Model.Dates"><option value="">All Dates</option></select>
     </p>
-    <input type="submit" vlaue="Filter" />
+    <input type="submit" value="filter" />
 </form>
 
 <table class="table">
