--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  color: #9a0000;
+  color: #000000;
   margin-bottom: 60px;
   background-color: #bceaff;
 }
@@ -28,7 +28,7 @@ body a {
 }
 
 .table {
-    color: #9a0000;
+    color: #000000;
 }
 
 .table a {
